overlap issue with video background

--- a/css/theartshow.css
+++ b/css/theartshow.css
@@ -100,6 +100,11 @@ a {
     color: blue;
 }
 
+.fullscreen-container {
+      height: 105vh;
+      width: 100vw;
+}
+
 .fullscreen-bg {
   position: fixed;
   top: 0;
@@ -141,6 +146,15 @@ a {
     display: none;
   }
 } 
+
+.solidcontainer {
+    width: 100vw;
+    background-color: white;
+    margin-top: 0;
+    padding-top: 30px;
+}
+
+
 
 .textwhitebg {
     background-color: #ffffff;
